--- a/src/css/Allcss.css
+++ b/src/css/Allcss.css
@@ -55,3 +55,22 @@ body {
   box-shadow: 0px 0px 10px 2px #ad3ed1;
   border-radius: 5%;
 }
+
+/* login section */
+
+.loginbox {
+  width: 400px;
+  margin: 10px 0px;
+  /* box-shadow: 0px 0px 10px 2px #22c1e9; */
+  border-radius: 5%;
+  margin: 35px 0px;
+  transition: 1s;
+}
+.loginback {
+  background-image: "https://img.freepik.com/free-photo/abstract-digital-grid-black-background_53876-97647.jpg?size=626&ext=jpg";
+}
+.lgneye {
+  position: absolute;
+  top: 47px;
+  right: 10px;
+}
